fixed drag and drop

--- a/CODE/drawing.html
+++ b/CODE/drawing.html
@@ -11,6 +11,11 @@
     <div class="toolbar">
         <button onclick="selectTool('pencil')">Pencil</button>
         <button onclick="selectTool('eraser')">Eraser</button>
+        <button onclick="selectTool('move')">Move</button>
+        <button onclick="openImagePanel()">Images</button>
+        
+    </div>
+    <div id="imagePanel" class="image-panel">
         <img src="src/icon1.png" alt="Icon 1" draggable="true" ondragstart="drag(event)">
         <img src="src/icon2.png" alt="Icon 2" draggable="true" ondragstart="drag(event)">
         <img src="src/icon3.png" alt="Icon 3" draggable="true" ondragstart="drag(event)">
