edited buttons and their names

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container">
         <input type="text" placeholder="Enter your name">
-        <button onclick="goToDrawingPage()">Page 2 - Drawing</button>
-        <button onclick="goToDrawingPage()">Page 2 - Drawing</button>
-        <button onclick="goToDrawingPage()">Page 2 - Drawing</button>
+        <button onclick="goToDrawingPage()">Dream in a Park</button>
+        <button onclick="goToDrawingPage()">Dream in Your Classroom</button>
+        <button onclick="goToDrawingPage()">Dream in Your Office</button>
     </div>
 
     
