edited look of things

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
     <div class="container">
         <input type="text" placeholder="Enter your name">
+    </div>
+    <div class="container">
         <button onclick="goToDrawingPage()">Dream in a Park</button>
         <button onclick="goToDrawingPage()">Dream in Your Classroom</button>
         <button onclick="goToDrawingPage()">Dream in Your Office</button>
     </div>
-
     
     <script src="script.js"></script>
 </body>
