updated ui and such

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <h1>Welcome to Wonderland!</h1>
+    <!-- <div class="container">
         <input type="text" placeholder="Enter your name">
-    </div>
+    </div> -->
     <div class="container">
-        <button onclick="goToDrawingPage()">Dream in a Park</button>
-        <button onclick="goToDrawingPage()">Dream in Your Classroom</button>
-        <button onclick="goToDrawingPage()">Dream in Your Office</button>
+        <button class="button-home" onclick="goToDrawingPage()">Dream in a Park</button>
+        <button class="button-home" onclick="goToDrawingPage()">Dream in Your Classroom</button>
+        <button class="button-home" onclick="goToDrawingPage()">Dream in Your Office</button>
     </div>
     
     <script src="script.js"></script>
