--- a/drawing.html
+++ b/drawing.html
@@ -9,6 +9,7 @@
 <body>
     <canvas id="canvas"></canvas>
     <div class="toolbar">
+        <button onclick="selectTool('dream')">Dream!</button>
         <div class="dropdown">
             <button onclick="toggleDropdown(), selectTool('pencil')" class="dropbtn">Pencil</button>
             <div id="pencilDropdown" class="dropdown-content">
@@ -17,13 +18,12 @@
             </div>
         </div>
         <button onclick="selectTool('eraser')">Eraser</button>
-        <button onclick="selectTool('move')">Move</button>
         <button onclick="openImagePanel()">Images</button>
         
     </div>
     <div id="imagePanel" class="image-panel">
-        <img src="src/icon1.png" alt="Icon 1" draggable="true" ondragstart="drag(event)">
-        <img src="src/icon2.png" alt="Icon 2" draggable="true" ondragstart="drag(event)">
+        <img src="src/crown.png" alt="Icon 1" draggable="true" ondragstart="drag(event)">
+        <img src="src/gif1.gif" alt="Icon 2" draggable="true" ondragstart="drag(event)">
         <img src="src/icon3.png" alt="Icon 3" draggable="true" ondragstart="drag(event)">
         <img src="src/icon4.png" alt="Icon 4" draggable="true" ondragstart="drag(event)">
     </div>
