added classroom image and button event listener for moving to drawing page

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <input type="text" placeholder="Enter your name">
     </div> -->
     <div class="container">
-        <button class="button-home" onclick="goToDrawingPage()">Dream in a Park</button>
-        <button class="button-home" onclick="goToDrawingPage()">Dream in Your Classroom</button>
-        <button class="button-home" onclick="goToDrawingPage()">Dream in Your Office</button>
+        <button class="button-home1" onclick="goToDrawingPage(event)">Dream in a Park</button>
+        <button class="button-home2" onclick="goToDrawingPage(event)">Dream in Your Classroom</button>
+        <button class="button-home3" onclick="goToDrawingPage(event)">Dream in Your Office</button>
     </div>
     
     <script src="script.js"></script>
