--- a/drawing.html
+++ b/drawing.html
@@ -23,11 +23,11 @@
     </div>
     <div id="imagePanel" class="image-panel">
         <img src="src/crown.png" alt="Icon 1" draggable="true" ondragstart="drag(event)">
-        <img src="src/feather1.gif" alt="Icon 2" draggable="true" ondragstart="drag(event)">
+        <img src="src/feather1.png" alt="Icon 2" draggable="true" ondragstart="drag(event)">
         <img src="src/feather2.png" alt="Icon 3" draggable="true" ondragstart="drag(event)">
         <img src="src/feather3.png" alt="Icon 4" draggable="true" ondragstart="drag(event)">
-        <img src="src/potion1.png" alt="Icon 4" draggable="true" ondragstart="drag(event)">
-        <img src="src/potion2.png" alt="Icon 4" draggable="true" ondragstart="drag(event)">
+        <img src="src/potion1.png" alt="Icon 5" draggable="true" ondragstart="drag(event)">
+        <img src="src/potion2.png" alt="Icon 6" draggable="true" ondragstart="drag(event)">
     </div>
 
     <script src="script.js"></script>
