Update drawing.html with Kaytie's assets

--- a/drawing.html
+++ b/drawing.html
@@ -28,6 +28,12 @@
         <img src="src/feather3.png" alt="Icon 4" draggable="true" ondragstart="drag(event)">
         <img src="src/potion1.png" alt="Icon 5" draggable="true" ondragstart="drag(event)">
         <img src="src/potion2.png" alt="Icon 6" draggable="true" ondragstart="drag(event)">
+        <img src="src/spadeCardMan.png" alt="Icon 7" draggable="true" ondragstart="drag(event)">
+        <img src="src/portal.png" alt="Icon 8" draggable="true" ondragstart="drag(event)">
+        <img src="src/fairy.png" alt="Icon 9" draggable="true" ondragstart="drag(event)">
+        <img src="src/heartCardMan.png" alt="Icon 10" draggable="true" ondragstart="drag(event)">
+        <img src="src/diamondCardMan.png" alt="Icon 11" draggable="true" ondragstart="drag(event)">
+        <img src="src/clubCardMan.png" alt="Icon 12" draggable="true" ondragstart="drag(event)">
     </div>
 
     <script src="script.js"></script>
