adjusted image sizing
bottles and feathers

--- a/drawing.html
+++ b/drawing.html
@@ -46,31 +46,31 @@
         ondragstart="drag(event)"
       />
       <img
-        src="src/feather1.png"
+        src="src/green_feather.png"
         alt="Icon 2"
         draggable="true"
         ondragstart="drag(event)"
       />
       <img
-        src="src/feather2.png"
+        src="src/blue_feather.png"
         alt="Icon 3"
         draggable="true"
         ondragstart="drag(event)"
       />
       <img
-        src="src/feather3.png"
+        src="src/brown_feather.png"
         alt="Icon 4"
         draggable="true"
         ondragstart="drag(event)"
       />
       <img
-        src="src/potion1.png"
+        src="src/green_bottle.png"
         alt="Icon 5"
         draggable="true"
         ondragstart="drag(event)"
       />
       <img
-        src="src/potion2.png"
+        src="src/pink_bottle.png"
         alt="Icon 6"
         draggable="true"
         ondragstart="drag(event)"
