--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Drawing App</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <h1>Welcome to Wonderland!</h1>
     <!-- <div class="container">
         <input type="text" placeholder="Enter your name">
     </div> -->
     <div class="container">
-        <button class="button-home1" onclick="goToDrawingPage(event)">Dream in a Park</button>
-        <button class="button-home2" onclick="goToDrawingPage(event)">Dream in Your Classroom</button>
-        <button class="button-home3" onclick="goToDrawingPage(event)">Dream in Your Office</button>
+      <button class="button-home1" onclick="goToDrawingPage(event)">
+        Dream in a Park
+      </button>
+      <button class="button-home2" onclick="goToDrawingPage(event)">
+        Dream in Your Classroom
+      </button>
+      <button class="button-home3" onclick="goToDrawingPage(event)">
+        Dream in Your Office
+      </button>
+      <button class="button-home4" onclick="goToDrawingPage(event)">
+        Make Your Own Stickers!
+      </button>
     </div>
-    
+
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
