we can now make stickers :D
but you can only put them down on the canvas where you make the sticker oops

will fix

--- a/drawing.html
+++ b/drawing.html
@@ -37,6 +37,7 @@
       <button onclick="selectTool('eraser')">Eraser</button>
       <button onclick="openImagePanel()">Images</button>
       <button onclick="selectTool('dream')">Dream!</button>
+      <button onclick="useAsSticker(event)">Sticker!</button>
     </div>
     <div id="imagePanel" class="image-panel">
       <img
