--- a/stickerMaker.html
+++ b/stickerMaker.html
@@ -36,7 +36,7 @@
       </div>
       <button onclick="selectTool('eraser')">Eraser</button>
       <button onclick="openImagePanel()">Images</button>
-      <button onclick="selectTool('dream')">Dream!</button>
+      <button onclick="useAsSticker('src/transparent_bg.png')">Sticker!</button>
     </div>
     <div id="imagePanel" class="image-panel">
       <img
