--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Welcome to Wonderland!</h1>
     <div class="container">
-      <img src="src/park.jpeg" class="imgmain">
+      <img src="src/park.png" class="imgmain">
       <img src="src/classroomTiny.png" class="imgmain">
       <img src="src/officeTiny.png" class="imgmain">
       <img src="src/fairy.png" class="imgmain">
