--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="src/park.png" class="imgmain">
       <img src="src/classroomTiny.png" class="imgmain">
       <img src="src/officeTiny.png" class="imgmain">
-      <img src="src/fairy.png" class="imgmain">
+      <img src="src/diamondCardMan.png" class="imgmain">
     </div>
     <div class="container">
       <button class="button-home1" onclick="goToDrawingPage(event)">
