--- a/stickerMaker.html
+++ b/stickerMaker.html
@@ -35,8 +35,8 @@
         </div>
       </div>
       <button onclick="selectTool('eraser')">Eraser</button>
-      <button onclick="openImagePanel()">Images</button>
-      <button onclick="useAsSticker('src/transparent_bg.png')">Sticker!</button>
+      <button onclick="openImagePanel()">Stickers</button>
+      <button onclick="useAsSticker('src/transparent_bg.png')">Sticker It!</button>
     </div>
     <div id="imagePanel" class="image-panel">
       <img
