--- a/drawing.html
+++ b/drawing.html
@@ -10,6 +10,7 @@
     <canvas id="canvas"></canvas>
     <div class="toolbar">
       <button class="backButton" onclick="goToIndexPage()">Back</button>
+      <button class="dreamButton" onclick="selectTool('dream')">Dream It!</button>
       <div class="dropdown">
         <button
           onclick="toggleDropdown(), selectTool('pencil')"
@@ -35,8 +36,7 @@
         </div>
       </div>
       <button onclick="selectTool('eraser')">Eraser</button>
-      <button onclick="openImagePanel()">Images</button>
-      <button onclick="selectTool('dream')">Dream!</button>
+      <button onclick="openImagePanel()">Stickers</button>
     </div>
     <div id="imagePanel" class="image-panel">
       <img
