--- a/stickerMaker.html
+++ b/stickerMaker.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Drawing Page</title>
+    <title>Sticker Page</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -142,7 +142,6 @@
         ondragstart="drag(event)"
       />
     </div>
-
     <script src="script.js"></script>
   </body>
 </html>
